<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:title="General">
        <androidx.preference.CheckBoxPreference
            android:key="enable_automatic_subscription"
            android:title="Enable Automatic Track Subscription"
            android:defaultValue="true"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/codec_title">
        <androidx.preference.ListPreference
            android:key="audio_codec"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_audio_codec" />
        <androidx.preference.ListPreference
            android:key="video_codec"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_video_codec" />
        <androidx.preference.CheckBoxPreference
            android:key="vp8_simulcast"
            android:title="@string/vp8_simulcast"
            android:defaultValue="false"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/sender_bandwidth_constraints">
        <androidx.preference.EditTextPreference
            android:key="sender_max_audio_bitrate"
            android:title="@string/max_audio_bitrate"
            android:defaultValue="0"/>
        <androidx.preference.EditTextPreference
            android:key="sender_max_video_bitrate"
            android:title="@string/max_video_bitrate"
            android:defaultValue="0" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
